<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="@dimen/scroll_view_bottom"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/zebraHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@android:color/white"
                android:elevation="@dimen/elevation_default"
                android:padding="@dimen/margin_default">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print_demo_for_bluetooth_and_usb"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@color/zebra_blue"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ipDnsRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/usb"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/bluetoothRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:checked="true"
                        android:text="Bluetooth (R)"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="72dp"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small">

                    <TextView
                        android:id="@+id/macAddressText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mac_address"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/macInput"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/status_not_connected"
                    android:textSize="18.0sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@android:color/white"
                android:elevation="@dimen/elevation_default">

                <Button
                    android:id="@+id/testButton"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/test"
                    android:textColor="@color/zebra_blue"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>









